Separate web service implementation and interface.
The SOAP web service got it's own interface so the
'JaxWsProxyFactoryBean' could be used to access the web service from
integration tests.