@@ -100,7 +100,7 @@
 							<goal>wsgen</goal>
 						</goals>
 						<configuration>
-							<sei>org.nerdcoding.example.soap.server.web.WeatherEndpoint</sei>
+							<sei>org.nerdcoding.example.soap.server.web.WeatherEndpointImpl</sei>
 							<genWsdl>true</genWsdl>
 							<inlineSchemas>true</inlineSchemas>
 							<resourceDestDir>${project.build.directory}/generated-sources/wsdl</resourceDestDir>
@@ -133,6 +133,34 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.18.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<argLine>-Dfile.encoding=UTF-8 --add-modules java.xml.bind,java.xml.ws</argLine>
+					<includes>
+						<include>**/*IT.java</include>
+					</includes>
+					<jvm>${java.home}/bin/java</jvm>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
